--- a/examples/react-todo/index.html
+++ b/examples/react-todo/index.html
@@ -9,11 +9,12 @@
             paths: {
                 "react": "https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react.min",
                 "react-dom": "https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react-dom.min",
-                "nano-sql": "../nano-sql.min"
+                "nano-sql": "../nano-sql.min",
+                "nano-sql-react": "https://rawgit.com/ClickSimply/Nano-SQL-React/master/nano-sql-react.min"
             }
         })
 
-        require(["index", "react", "react-dom", "nano-sql"], function(app) {})
+        require(["index", "react", "react-dom", "nano-sql", "nano-sql-react"], function(app) {})
     </script>
     <style>
         .noselect {
