--- a/examples/testing.html
+++ b/examples/testing.html
@@ -508,14 +508,14 @@
         nSQL("Users")
         .model([...])
         .from({
-            calcMsgs: (table: string, done:(value) => void, ...args ) => {
+            calcMsgs: (table: string, existingValue, done:(newValue) => void, ...args ) => {
 
             }
         })
         nSQL("table")
         .model([...])
         .from({
-            calcAnalytics: (table: string, done:(newRow) => void, row ) => {
+            calcAnalytics: (table: string, existingRow, done:(newRow) => void, ...args ) => {
 
             }
         })
@@ -524,15 +524,23 @@
         nSQL("table").query("updateFrom", columns?[]).where(...).exec().then(() => {
 
         })
-        // call from fn to modify/update any column in row results
+        // call from fn to update all found rows
         nSQL("table").query("updateFrom", "calcAnalytics()").where(...).exec().then(() => {
+
+        })
+        // generate new rows OR update existing ones given primary keys
+        nSQL("table").query("updateFrom", "calcAnalytics()").on([pk1, pk2, pk3...]).exec().then(() => {
 
         })
 
         nSQL("table").model([
             {key: "id", type: "int", props: ["pk", "ai"]},
-            {key: "username", type: "string", props: ["from=>Users.username"]},
+            {key: "username", type: "string", props: ["from=>userID=>username"]},
             {key: "userID", type: "Users", props: ["from=>GHOST"]} // also secondary index
+
+            {key: "usernames", type: "string[]", props: ["from=>userID=>username"]},
+            {key: "userID", type: "Users[]", props: ["from=>GHOST"]} // also secondary index
+
             {key: "unreadMsgs", type: "int", props: ["from=>Users.calcMsgs(id, userID)"]}
         ])
 
